EB-2001-12-10-0: Bugfix:    Fix in sgeee scheduler where pending tickets 
                            are moved into the template for pending tasks 

AH-2001-12-07-0: Cleanup:   Improved diagnosis possibilities when commd is 
                            blocked NIS/DNS resolver library calls.

SD-2001-12-07-1: Bugfix:    Fixed ln command in distinst when creating security
                            distribution.
                 Issue:     None (Fix of Cleanup: SD-2001-12-06-4)

EB-2001-12-07-0: Bugfix:    Reanimated code for 'qconf -sep'
                 Issue:     None (Bug only appeared in beta1)

JG-2001-12-07-0: Bugfix:    scheduler could dump core in SGE systems with 
                            usersort and maxujobs activated, if no pending jobs
                            existed.
                 Issue:     None (Fix of Enhancem. JG-2001-12-06-1)

SD-2001-12-06-4: Cleanup:   Cleaned up the security gss modules for Kerberos
                            and DCE support.  Fixed a bug in get_cred.c.
                            Updated the HTML documentation on using the
                            GSS security modules. Updated aimk, Makefiles
                            and distinst to fully support security modules
                            or security binaries distributions.

EB-2001-12-06-3: Bugfix:    qstat -s r didn't show running jobs
                 Issue:     None (Fix of Enhancem.: EB-2001-12-04-0)

JG-2001-12-06-2: Testsuite: Adapt qmaster size test to use newer spawn function
                            open_remote_spawn_process.

JG-2001-12-06-1: Enhancem.: Performance improvement in scheduler if the
                            number of jobs/user is limited schedd config,
                            parameter maxujobs.

EB-2001-12-06-2: Bugfix:    Jobs submittet with start time in future where
                            never started
                            Qalter -hold_jid failed for unenrolled pending
                            jobs 